# FDVR

./: CMakeLists.txt  README.md  input.txt
src/: dvr_solvers.f90  grid_gen.f90  io.f90  main.f90  potentials.f90  types.f90
